--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,7 @@
     margin: 2;
 }
 
-html {
-    background-color: dimgrey;
-}
+
 
 /* model */
 .overlay {
@@ -120,7 +118,7 @@ header {
 
 h1 {
     font-family: Noto+Sans+SC, serif;
-    color: aquamarine;
+    color: black;
     display: flex;
     justify-content: center;
     font-size: 30px;
@@ -265,7 +263,7 @@ footer > img {
 }
 
 #search-results {
-    color: aquamarine;
+    color: black;
     text-align: center;
 }
 
