--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ header {
 
 h1 {
     font-family: Noto+Sans+SC, serif;
-    color: aquamarine;
+    color: black;
     display: flex;
     justify-content: center;
     font-size: 30px;
